// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sizesAttribute returns a list of media queries 1`] = `"(min-width: 980px) 20px, (min-width: 740px) 20%, 30vw"`;

exports[`styles returns dimensions for each media query 1`] = `
.emotion-0 {
  width: 30vw;
  height: calc(30vw * 0.5);
}

@media (min-width: 980px) {
  .emotion-0 {
    width: 20px;
    height: calc(20px * 0.5);
  }
}

@media (min-width: 740px) {
  .emotion-0 {
    width: 20%;
    height: calc(20% * 0.5);
  }
}

<div
  className="emotion-0"
/>
`;

exports[`styles returns the default dimensions when there are no media queries 1`] = `
.emotion-0 {
  width: 30vw;
  height: calc(30vw * 0.75);
}

<div
  className="emotion-0"
/>
`;
